# dev_workspace

./: .dockerignore  .gitignore  .gitmodules  Bakefile  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  products.json  rakefile.rb
.github/workflows/: Build.yml  android.yml  docker-image.yml
extras/: CMakeLists.txt
extras/TestLab/: CMakeLists.txt
extras/TestLab/GetLemons/: .gitignore  CMakeLists.txt  README.md  get_cpm.cmake  get_lemons.cmake
extras/TestLab/Source/: main.cpp
extras/TestLab/Source/modules/bv_lab_graph/plugins/: IOConfigurationWindow.cpp  IOConfigurationWindow.h  InternalPlugins.cpp  InternalPlugins.h  PluginGraph.cpp  PluginGraph.h
extras/TestLab/Source/modules/bv_lab_gui/: GraphEditorPanel.cpp  GraphEditorPanel.h  MainHostWindow.cpp  MainHostWindow.h  PluginWindow.h
make/: Makefile  cmake.make  logs.make  process_logs.py  system.make
products/: CMakeLists.txt  products.json
rake/: RakeUtils.rb  build.rb  clangformat.rb  clean.rb  cmake.rb  constants.rb  cpack.rb  default_files.rb  default_files_config.rb  files.rb  git.rb  init.rb  log.rb  mode.rb  os.rb  tests.rb  zipper.rb
rake/JucePluginHost/: CMakeLists.txt  juce_plugin_host.rb
rake/build_tasks/: products.json  rakefile.rb
rake/common/: Common.rb  constants.rb  download.rb  files.rb  mode.rb  os.rb  time.rb
rake/post_configure/: PostConfigure.rb  clangformat.rb  github_scripts.rb  gitignore.rb
rake/post_configure/clang_format/: clangformat.rb
rake/post_configure/default_gitignore/: gitignore.rb
rake/post_configure/github_scripts/: github_scripts.rb
rake/products/: products.json  products.rb
rake/program_wrappers/: ProgramWrappers.rb  cpack.rb
rake/tests/: pluginval.rb  tests.rb
ruby/: RubyUtils.rb  init.rb
ruby/common/: Common.rb  constants.rb  download.rb  env.rb  os.rb  startup_script.rb  time.rb
ruby/modules/: Modules.rb  PluginQC.rb  clean.rb  git.rb  init.rb  log.rb
ruby/program_wrappers/: clangformat.rb  cmake.rb  cpack.rb  git.rb
shell/: ci_build.sh  ci_ios_build.sh  mac_install_ruby.sh  on_docker_startup.sh
